[package]
name = "aloha"
version = "0.1.0"
edition = "2021"

# Starting in Rust 1.62 you can use `cargo add` to add dependencies 
# to your project.
#
# If you're using an older Rust version,
# download cargo-edit(https://github.com/killercup/cargo-edit#installation) 
# to install the `add` subcommand.
#
# Running `cargo add DEPENDENCY_NAME` will
# add the latest version of a dependency to the list,
# and it will keep the alphabetic ordering for you.

[dependencies]
chrono = "0.4.26"
dotenvy = "0.15.7"
sha2 = "0.10.6"
sqlx = { version = "0.7.0-alpha.2", features = [ "runtime-tokio", "tls-rustls", "postgres" ] }
lambda_http = { version = "0.8.0", default-features = false, features = ["apigw_http"] }
lambda_runtime = "0.8.0"
liquid = "0.26.1"
rand = "0.8.5"
reqwest = { version = "0.11.17", features = ["json", "gzip"] }
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
async-once-cell = "0.4.4"
openssl = { version = "0.10.52", features = ["vendored"]}
futures = "0.3.28"

[profile.release]
# Optimize for fast execution time
lto = true
codegen-units = 1
debug = false
strip = true
opt-level="z"

